syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package api.v1;

option go_package = "kiseki/api/v1;api";

message CreateJobApplicationRequest {
  string company = 1;
  string title = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.StringValue notes = 4;
  google.protobuf.StringValue cv = 5;
  google.protobuf.StringValue cover_letter = 6;
}

message CreateJobApplicationResponse {
  JobApplication job_application = 1;
}

message ListJobApplicationsRequest {}

message ListJobApplicationsResponse {
  repeated JobApplication job_applications = 1;
}

message UpdateJobApplicationRequest {
  string id = 1;
  string company = 2;
  string title = 3;
  google.protobuf.StringValue description = 4;
  google.protobuf.StringValue notes = 5;
  google.protobuf.StringValue cv = 6;
  google.protobuf.StringValue cover_letter = 7;
}

message UpdateJobApplicationResponse {
  JobApplication job_application = 1;
}

message DeleteJobApplicationRequest {
  string id = 1;
}

message DeleteJobApplicationResponse {
}

message JobApplication {
  string id = 1;
  string company = 2;
  string title = 3;
  google.protobuf.StringValue description = 4;
  google.protobuf.StringValue notes = 5;
  google.protobuf.StringValue cv = 6;
  google.protobuf.StringValue cover_letter = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

service Service {
  rpc CreateJobApplication(CreateJobApplicationRequest) returns (CreateJobApplicationResponse);
  rpc ListJobApplications(ListJobApplicationsRequest) returns (ListJobApplicationsResponse);
  rpc UpdateJobApplication(UpdateJobApplicationRequest) returns (UpdateJobApplicationResponse);
  rpc DeleteJobApplication(DeleteJobApplicationRequest) returns (DeleteJobApplicationResponse);
}

